--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -1,3 +1,9 @@
+# Compile this file with:
+#   pip-compile --output-file=requirements.dev.txt requirements.dev.in --resolver=backtracking
+#
+# Then install with
+#   pip install -r requirements.dev.txt
+
 black
 ipykernel
 line_profiler
