Add requirements to settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = spather
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
+requirements = matplotlib numpy scikit-learn seaborn torch tqdm
+dev_requirements = black mypy types-tqdm
 # console_scripts =
