--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,6 +4,10 @@
 #
 #    pip-compile --output-file=requirements.dev.txt requirements.dev.in
 #
+aiohttp==3.9.3
+    # via fsspec
+aiosignal==1.3.1
+    # via aiohttp
 appnope==0.1.4
     # via ipykernel
 asttokens==2.4.1
@@ -12,10 +16,16 @@ asttokens==2.4.1
     #   stack-data
 astunparse==1.6.3
     # via nbdev
+attrs==23.2.0
+    # via aiohttp
 black==24.1.1
     # via -r requirements.dev.in
 build==1.0.3
     # via pip-tools
+certifi==2024.2.2
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
     # via
     #   black
@@ -43,10 +53,21 @@ filelock==3.13.1
     # via torch
 fonttools==4.48.1
     # via matplotlib
-fsspec==2024.2.0
-    # via torch
+frozenlist==1.4.1
+    # via
+    #   aiohttp
+    #   aiosignal
+fsspec[http]==2024.2.0
+    # via
+    #   lightning
+    #   pytorch-lightning
+    #   torch
 ghapi==1.0.4
     # via nbdev
+idna==3.6
+    # via
+    #   requests
+    #   yarl
 ipykernel==6.29.2
     # via
     #   -r requirements.dev.in
@@ -74,6 +95,13 @@ jupyterlab-widgets==3.0.10
     # via ipywidgets
 kiwisolver==1.4.5
     # via matplotlib
+lightning==2.2.1
+    # via -r requirements.dev.in
+lightning-utilities==0.11.2
+    # via
+    #   lightning
+    #   pytorch-lightning
+    #   torchmetrics
 line-profiler==4.1.2
     # via -r requirements.dev.in
 markupsafe==2.1.5
@@ -88,6 +116,10 @@ matplotlib-inline==0.1.6
     #   ipython
 mpmath==1.3.0
     # via sympy
+multidict==6.0.5
+    # via
+    #   aiohttp
+    #   yarl
 mypy==1.8.0
     # via -r requirements.dev.in
 mypy-extensions==1.0.0
@@ -104,11 +136,15 @@ numpy==1.26.4
     # via
     #   -r requirements.dev.in
     #   contourpy
+    #   lightning
     #   matplotlib
     #   pandas
+    #   pytorch-lightning
     #   scikit-learn
     #   scipy
     #   seaborn
+    #   torchmetrics
+    #   torchvision
 packaging==23.2
     # via
     #   black
@@ -116,7 +152,11 @@ packaging==23.2
     #   fastcore
     #   ghapi
     #   ipykernel
+    #   lightning
+    #   lightning-utilities
     #   matplotlib
+    #   pytorch-lightning
+    #   torchmetrics
 pandas==2.2.0
     # via seaborn
 parso==0.8.3
@@ -126,7 +166,9 @@ pathspec==0.12.1
 pexpect==4.9.0
     # via ipython
 pillow==10.2.0
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   torchvision
 pip-tools==7.3.0
     # via -r requirements.dev.in
 platformdirs==4.2.0
@@ -152,14 +194,21 @@ python-dateutil==2.8.2
     #   jupyter-client
     #   matplotlib
     #   pandas
+pytorch-lightning==2.2.1
+    # via lightning
 pytz==2024.1
     # via pandas
 pyyaml==6.0.1
-    # via nbdev
+    # via
+    #   lightning
+    #   nbdev
+    #   pytorch-lightning
 pyzmq==25.1.2
     # via
     #   ipykernel
     #   jupyter-client
+requests==2.31.0
+    # via torchvision
 scikit-learn==1.4.0
     # via -r requirements.dev.in
 scipy==1.12.0
@@ -180,13 +229,27 @@ sympy==1.12
 threadpoolctl==3.2.0
     # via scikit-learn
 torch==2.2.0
+    # via
+    #   -r requirements.dev.in
+    #   lightning
+    #   pytorch-lightning
+    #   torchmetrics
+    #   torchvision
+torchmetrics==1.3.2
+    # via
+    #   lightning
+    #   pytorch-lightning
+torchvision==0.17.0
     # via -r requirements.dev.in
 tornado==6.4
     # via
     #   ipykernel
     #   jupyter-client
 tqdm==4.66.1
-    # via -r requirements.dev.in
+    # via
+    #   -r requirements.dev.in
+    #   lightning
+    #   pytorch-lightning
 traitlets==5.14.1
     # via
     #   comm
@@ -202,12 +265,17 @@ types-tqdm==4.66.0.20240106
     # via -r requirements.dev.in
 typing-extensions==4.9.0
     # via
+    #   lightning
+    #   lightning-utilities
     #   mypy
+    #   pytorch-lightning
     #   torch
 tzdata==2023.4
     # via pandas
 urllib3==2.2.0
-    # via types-requests
+    # via
+    #   requests
+    #   types-requests
 watchdog==4.0.0
     # via nbdev
 wcwidth==0.2.13
@@ -218,6 +286,8 @@ wheel==0.42.0
     #   pip-tools
 widgetsnbextension==4.0.10
     # via ipywidgets
+yarl==1.9.4
+    # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
